# Lattice_Microbes

./: README.conda  README.md  README_install.conda  Vagrantfile  installation_instructions.txt  lm_precomp.yml  lm_precomp_aarch64.yml  readme.md  venvInstall.sh
Lattice-Microbes-Testing/: README_Zane.conda
Lattice-Microbes-Testing/Lattice-Microbes/: Makefile
Lattice-Microbes-Testing/Lattice-Microbes/api_docs/: .buildinfo  Installation.html  Visualization.html  genindex.html  index.html  jLM.html  py-modindex.html  pyLM.html  pySTDLM.html  search.html  searchindex.js
Lattice-Microbes-Testing/Lattice-Microbes/docs/: HDF5FileFormat.text  KNOWN_ISSUES  lm.prof.conf
Lattice-Microbes-Testing/Lattice-Microbes/pylm-examples/: example-LotkaVolterra.py  example-bimol-pp.py  example-bimol.py  example-extendcme.py  example-lac2state.py  example-minde.py  example-tightPackedCellArray.py
Lattice-Microbes-Testing/Lattice-Microbes/src/jlm/: .prospector.yaml  CMakeLists.txt  MANIFEST.in  setup.py.in
Lattice-Microbes-Testing/Lattice-Microbes/src/jlm/jLM/: ColorGen.py  DisplayUtils.py  ImageAnalysis.py  JupyterDisplay.py  Lattice.pyx  RDME.py  Solvers.py  TexFmt.py  Types.py
Lattice-Microbes-Testing/Lattice-Microbes/src/jlm/jLM/templates/: download.js  jupyter.css  jupyterInit.html  parameterTable.tex  rates.html  reactionTable.tex  regionTable.tex  siminfo.html  siminfo.tex  sitestack.html  species.html  standaloneX3d.html  structure.x3d  x3d.html
Lattice-Microbes-Testing/Lattice-Microbes/src/pylm/: CMakeLists.txt  setup.py.in
Lattice-Microbes-Testing/Lattice-Microbes/src/pylm/pyLM/: CME.py  CME.py.save  RDME.py  __init__.py  ipyInterface.py  units.py
Lattice-Microbes-Testing/Lattice-Microbes/src/pylm/pySTDLM/: CellArranger.py  CmdUtils.py  Distributions.py  OnTheFly.py  PostProcessing.py  SBMLReader.py  StandardCells.py  __init__.py
Lattice-Microbes-Testing/Lattice-Microbes/src/vmd/: CMakeLists.txt
api_docs/: API.html  Citations.html  Introduction.html  LM.html  objects.inv
api_docs/_autosummary/: jLM.Lattice.html  jLM.RegionBuilder.html  jLM.Solvers.html  jLM.TexFmt.html  pyLM.ipyInterface.html  pySTDLM.CellArranger.html  pySTDLM.Cells.html  pySTDLM.Distributions.html  pySTDLM.NetworkVisualization.html  pySTDLM.PostProcessing.html  pySTDLM.StandardReactions.html  pySTDLM.html
api_docs/_modules/: jLM.html
api_docs/_modules/pyLM/: CME.html  (+2 more)
api_docs/_sources/: Visualization.rst.txt  jLM.rst.txt
containers_build/: Dockerfile  apptainer-dtai.def  apptainer.def
docs/: FAQ  LICENSE  README  changelog.txt
docs/config/: local.mk.linux  local.mk.linux-cuda-globalS-rel22  local.mk.linux-cuda-globalS-rel23  local.mk.linux-cuda-rel22  local.mk.linux-cuda50-rel22  local.mk.linux-rel22
example_rdme_files/: README.txt
pylm-examples/: example-MichaelisMenten.py  example-bimolConc.py  example-extendrdme.py  example-restart.py  example-rnaprotein.py  example-shapes.py  example-stochasticResonator.py
src/: CMakeLists.txt  config.h.in
src/builder/: Capsule.h  CapsuleShell.cpp  CapsuleShell.h  Cone.cpp  Cylinder.cpp  Cylinder.h  Hemisphere.h  LatticeBuilder.cpp  Mesh.h  Shape.cpp  Shape.h  Torus.h  Union.h  UnionSet.cpp  UnionSet.h
src/cmake/: cuda.cmake  options.cmake
src/cmd/: CMakeLists.txt  Main-MPMPD.cpp  MainSA.cpp  lm_sbml_import.cpp  lm_setdm.cpp  lm_setrm.cpp
src/cme/: CMESolver.cpp  CMESolver.h  CMakeLists.txt  GillespieDSolver.h  HillSwitch.cpp  LacHillSwitch.cpp  NextReactionSolver.cpp  NextReactionSolver.h  SelfRegulatingGeneSwitch.cpp  SelfRegulatingGeneSwitch.h  TwoStateExpression.cpp  TwoStateExpression.h  TwoStateHillLoopSwitch.cpp  TwoStateHillLoopSwitch.h
src/core/: CheckpointSignaler.cpp  DataOutputQueue.cpp  Globals.cpp  Globals.h  LocalDataOutputWorker.cpp  MPIRemoteDataOutputQueue.cpp  MPIRemoteDataOutputQueue.h  Print.cpp  ResourceAllocator.cpp  ResourceAllocator.h  Timer.h  Types.h  runSimulation.cpp  runSimulation.h  util.cpp  util.h
src/cuda/: lm_cuda.h
src/doc/: API.rst  Citations.rst  doxygen.swig.cf  pySTDLM.rst
src/io/: CMakeLists.txt  SimulationFile.cpp  SimulationFile.h  SimulationFile_create.cpp  SimulationParameters.cpp  lm_hdf5.h
src/jlm/jLM/: Analysis.py  BaseTypes.py  JupyterDisplay.py  Lattice.pyx  LmInteract.py  RDME.py  RegionBuilder.py  Template.py  __init__.py
src/jlm/jLM/templates/: allSpecies.html  datastack.html  newObject.html  objContainer.html  params.html  reactionTable.html  region.html
src/me/: MESolverFactory.cpp
src/protobuf/: DiffusionModel.proto  FirstPassageTimes.proto  Lattice.proto  ReactionModel.proto
src/pylm/pyLM/: CME.py  LMLogger.py  RDME.py
src/pylm/pySTDLM/: Cells.py  NetworkVisualization.py  PostProcessing.py  StandardReactionSystems.py  StandardReactions.py
src/rdme/: ByteLattice.cpp  CMakeLists.txt  CudaByteLattice.h  IntLattice.cpp  IntLattice.h  IntMpdRdmeSolver.cu  IntMpdRdmeSolver.h  Lattice.cpp  Lattice.h  MGPUIntMpdRdmeSolver.cu  MGPUIntMpdRdmeSolver.h  MGPUMpdRdmeSolver.cu  MGPUMpdRdmeSolver.h  MPIMpdRdmeSolver.cu  MPIMpdRdmeSolver.h  MpdRdmeSolver.cu  MpdRdmeSolver.h  MpdTestHarness.h  RDMESolver.cpp  RDMESolver.h
src/rdme/GPUMapper/: MultiGPUMapper.cu  MultiGPUMapper.h  SegmentDescriptor.h  ZDivMultiGPUMapper.cu  ZDivMultiGPUMapper.h  osx_barrier.h
src/rdme/dev/: bit_packed_diffusion_1d_dev.cu  byte_diffusion_1d_mgpu_dev.cu  byte_diffusion_3dw_dev.cu  lattice_sim_1d_dev.cu  lattice_sim_3dw_dev.cu  word_reaction_dev.cu  xor_random_dev.cu
src/rng/: XORShift.h  XORWow.h
src/swig/: CMakeLists.txt  documentation.i  embed_lm_dot_py.py  lm.i
src/thread/: Thread.h  Worker.h  WorkerManager.h
src/vmd/: CMakeLists.txt  lmplugin.cpp  lmplugin_backup.cpp
testing/apron_test/: Bidispersion_test.ipynb  TutR1.1_bimolecular_uni.ipynb
testing/c/: TestingHelper.cpp  boost_test.cpp
timing/c/: TimingConstants.h  subdir.mk
timing/cuda/: byte_diffusion_2d.cu  kernel_launch.cu
visit/LatticeMicrobesPlugin/: CMakeCache.txt  CMakeLists.txt  LatticeMicrobesCommonPluginInfo.C  LatticeMicrobesMDServerPluginInfo.C  avtLatticeMicrobesFileFormat.h
vmd/c/: lmplugin.cpp  subdir.mk
(+334 files in other folders)
